--- a/template/package.json
+++ b/template/package.json
@@ -1,6 +1,6 @@
 {
   "name": "{{ name }}",
-  "version": "1.0.0",
+  "version": "1.0.0-beta.5",
   "description": "{{ description }}",
   "author": "{{ author }}",
   "private": true,
